backend validation checks added, mobile nav title wrapping fixed, added if statements to the nav bar to check if in session which then customizes the links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,11 @@ nav {
     font-family: 'Open Sans', sans-serif;
 }
 
+.logged-in-as {
+    cursor: default;
+     pointer-events: none;
+}
+
 .page-footer {
     background-color: #00BFFF;
     box-shadow: 0px -5px 5px black;
@@ -43,12 +48,14 @@ nav {
     margin: 0;
 }
 
-.row .col.footer-text-col {
-    width: 33%;
-}
-
 .contact-footer {
     word-break: break-word;
+}
+
+/* (OVERRIDING MATERIALIZE ROW AND COL STYLES) */
+
+.row .col.footer-text-col {
+    width: 33%;
 }
 
 
@@ -96,32 +103,12 @@ nav {
     transition: background-color .3s ease-in-out
 }
 
-.card:hover {
+.card-hover:hover {
     background-color: #1E90FF;
 }
 
 .card-title {
     font-family: 'Patua One', cursive;
-}
-
-.col .row.card-row {
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-    padding: 0; 
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.col .row.card-row-container {
-    width:50%;
-    height: 50%;
-	position: relative;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
 }
 
 .term-hr {
@@ -143,6 +130,28 @@ nav {
     word-break: break-word;
 }
 
+/* (OVERRIDING MATERIALIZE ROW AND COL STYLES) */
+
+.col .row.card-row {
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 0; 
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.col .row.card-row-container {
+    width:50%;
+    height: 50%;
+	position: relative;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
 
 /* LOGIN FORMS */
 
@@ -155,7 +164,7 @@ button {
 }
 
 
-/* CATEGORY PAGE STYLES */
+/* CATEGORY PAGE STYLES (OVERRIDING MATERIALIZE ROW AND COL STYLES) */
 
 
 .row .term-card {
@@ -222,11 +231,25 @@ button {
     }
 }
 
+/* OVERRIDING MATERIALIZE CSS */
+
+@media only screen and (max-width: 992px) {
+nav .brand-logo {
+    width: 60%;
+    left: 50%;
+}
+}
+
+/* FLASH CARDS */
+
+
 .flashes {
     background-color: #00BFFF;
     color: white;
     font-family: 'Patua One', cursive;
     width: 50%;
+    border: 2px solid black;
+    text-align: center;
     margin: 2% 25% 2% 25%;
 }
 
